Compile in ONIE LSB_RELEASE_TAG as env variable
Ticket: 0
Reviewed By: bshetti
Testing Done:

Added a compile time env variable containing ther LSB_RELEASE_TAG.
This is added to the compiled in env, available as $onie_version.

This is also printed when ONIE boots:

u-boot-> boot

Loading Open Network Install Environment ...
Version: 0.0.1-3dfd742-20130509-NB

Also availbe from Linux:

root@linux:~# fw_printenv onie_version
onie_version=0.0.1-3dfd742-20130509-NB

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -168,7 +168,7 @@ MACHINEROOT ?= $(realpath ../machine)
 MACHINEDIR   = $(MACHINEROOT)/$(MACHINE)
 
 ifeq (,$(filter help clean-all dist, $(MAKECMDGOALS)))
-  ifeq ($(MACHINEDIR),)
+  ifeq ($(shell ls $(MACHINEDIR)),)
     $(warning Unable to find machine directory '$(MACHINE)' in $(realpath ../machine))
     $(error You must set the MACHINE= variable when invoking make.)
   endif
