Add demo and installer directories to core distribution
Ticket: 0
Reviewed By: no one
Testing Done:

Add recently add directories to the core distribution of ONIE.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -249,7 +249,9 @@ DIST_CORE_STAGE_DIR = $(DIST_DIR)/$(DIST_CORE_RELEASE)
 DIST_CORE_TARBALL = $(DIST_CORE_STAGE_DIR).tar.xz
 DIST_CORE_DIRS = 	\
 	build-config 	\
+	demo		\
 	docs	 	\
+	installer	\
 	patches 	\
 	rootconf 	\
 	upstream
