Remove backup files from distribution tarballs
Ticket: 0
Reviewed By: no one
Testing Done:

Make sure no editor backup files make their way into the distribution
tarballs.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -242,11 +242,12 @@ clean-all:
 	$(Q) echo "=== Finished making $@ ==="
 
 PHONY += dist
-DIST_DIR = $(BUILDDIR)/dist
-DIST_MACHINE_DIR = $(BUILDDIR)/dist/machine
-DIST_CORE_RELEASE = onie-core-$(LSB_RELEASE_TAG)
-DIST_CORE_STAGE_DIR = $(DIST_DIR)/$(DIST_CORE_RELEASE)
-DIST_CORE_TARBALL = $(DIST_CORE_STAGE_DIR).tar.xz
+DIST_DIR		= $(BUILDDIR)/dist
+DIST_MACHINE_DIR	= $(BUILDDIR)/dist/machine
+DIST_CORE_RELEASE	= onie-core-$(LSB_RELEASE_TAG)
+DIST_CORE_STAGE_DIR	= $(DIST_DIR)/$(DIST_CORE_RELEASE)
+DIST_CORE_TARBALL	= $(DIST_CORE_STAGE_DIR).tar.xz
+DIST_TAR_OPTIONS	= --exclude-backups --exclude=*~
 DIST_CORE_DIRS = 	\
 	build-config 	\
 	demo		\
@@ -261,11 +262,11 @@ dist:
 	$(Q) mkdir -p $(DIST_DIR) $(DIST_MACHINE_DIR) $(DIST_CORE_STAGE_DIR)
 	$(Q) cd $(PROJECTDIR); cp -a $(DIST_CORE_DIRS) $(DIST_CORE_STAGE_DIR)
 	$(Q) echo $(LSB_RELEASE_TAG) > $(DIST_CORE_STAGE_DIR)/build-config/conf/lsb-release
-	$(Q) tar -C $(DIST_DIR) -cJf $(DIST_CORE_TARBALL) $(DIST_CORE_RELEASE)
+	$(Q) tar $(DIST_TAR_OPTIONS) -C $(DIST_DIR) -cJf $(DIST_CORE_TARBALL) $(DIST_CORE_RELEASE)
 	$(Q) rm -rf $(DIST_CORE_STAGE_DIR)
 	$(Q) cd $(PROJECTDIR)/machine; for m in $$(ls) ; do \
 		echo "   === Adding machine: $$m ==="; \
-		tar -C $(PROJECTDIR) -cJf $(DIST_MACHINE_DIR)/onie-$${m}.tar.xz machine/$${m} ; \
+		tar $(DIST_TAR_OPTIONS) -C $(PROJECTDIR) -cJf $(DIST_MACHINE_DIR)/onie-$${m}.tar.xz machine/$${m} ; \
 	done
 	$(Q) echo "=== Finished making distribution $(DIST_CORE_TARBALL)"
 
