Include a machine specific makefile fragment
Ticket: 0
Reviewed By: dustin
Testing Done:

Currently using it to map machine name to the a longer, or otherwise
different name while compiling U-Boot.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -180,6 +180,7 @@ ifneq (,$(MAKECMDGOALS))
       $(warning You can also set the machine root directory with MACHINEROOT= .)
       $(error Unable to find valid machine configuration directory.)
     endif
+    include $(MACHINEDIR)/machine.make
   endif
 endif
 
