Generate LSB_RELEASE tag based on MACHINEROOT
Ticket: 0 
Reviewed By: dustin
Testing Done:

Base the LSB_RELEASE git hash on the MACHINEROOT, which may have been
specified on the command line.  This helps projects where ONIE is
housed as git submodule.  The release tag would be based on the parent
git repo (where the MACHINEROOT directory is), rather than on the ONIE
core git HEAD.

If ONIE is a submodule of the parent repo then the parent repo would
have a commit identifying the exact ONIE release, so no information is
lost.

In the case of a tarball release or other SCM scenario the user can
specify the GIT_HEAD variable on the 'make' command line.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -65,34 +65,6 @@ endif
 
 #-------------------------------------------------------------------------------
 #
-# Determine build id tag
-#
-# - default release is nightly build. 
-# - change it to RC1, RC2 etc. for Release Candidate releases
-# - or override this with a definition from the command line
-#
-VERSION_FILE	= $(abspath ./conf/version)
-RELEASE_VERSION = $(shell cat $(VERSION_FILE) | grep VERSION | sed -e 's/.*=//')
-RELEASE ?= "NB"
-LSB_RELEASE_TAG	?= $(shell [ -r ./conf/lsb-release ] && cat ./conf/lsb-release)
-ifeq ($(LSB_RELEASE_TAG),)
-  GIT_HEAD = $(shell git show --abbrev-commit HEAD | sed -ne "/^commit [0-9a-f]*/s/^commit //p")
-  ifeq (1, $(RELEASE))
-    LSB_RELEASE_TAG = $(RELEASE_VERSION)
-  else ifneq ($(RELEASE),NB)
-    LSB_RELEASE_TAG = $(RELEASE_VERSION)-$(GIT_HEAD)-$(RELEASE)
-  else
-    BUILD_DATE = $(shell date +%Y%m%d%H%M)
-    LSB_RELEASE_TAG = $(RELEASE_VERSION)-$(GIT_HEAD)-$(BUILD_DATE)-$(RELEASE)
-  endif
-  DIRTY  = $(shell git status | egrep -q '(Your branch is ahead|modified:|Untracked files:)' && echo dirty)
-  ifneq ($(DIRTY),)
-    LSB_RELEASE_TAG := $(LSB_RELEASE_TAG)-$(DIRTY)
-  endif
-endif
-
-#-------------------------------------------------------------------------------
-#
 #  help (the default target)
 #
 
@@ -181,6 +153,34 @@ ifneq (,$(MAKECMDGOALS))
       $(error Unable to find valid machine configuration directory.)
     endif
     include $(MACHINEDIR)/machine.make
+  endif
+endif
+
+#-------------------------------------------------------------------------------
+#
+# Determine build id tag
+#
+# - default release is nightly build. 
+# - change it to RC1, RC2 etc. for Release Candidate releases
+# - or override this with a definition from the command line
+#
+VERSION_FILE	= $(abspath ./conf/version)
+RELEASE_VERSION = $(shell cat $(VERSION_FILE) | grep VERSION | sed -e 's/.*=//')
+RELEASE ?= "NB"
+LSB_RELEASE_TAG	?= $(shell [ -r ./conf/lsb-release ] && cat ./conf/lsb-release)
+ifeq ($(LSB_RELEASE_TAG),)
+  GIT_HEAD = $(shell cd $(MACHINEDIR) && git show --abbrev-commit HEAD | sed -ne "/^commit [0-9a-f]*/s/^commit //p")
+  ifeq (1, $(RELEASE))
+    LSB_RELEASE_TAG = $(RELEASE_VERSION)
+  else ifneq ($(RELEASE),NB)
+    LSB_RELEASE_TAG = $(RELEASE_VERSION)-$(GIT_HEAD)-$(RELEASE)
+  else
+    BUILD_DATE = $(shell date +%Y%m%d%H%M)
+    LSB_RELEASE_TAG = $(RELEASE_VERSION)-$(GIT_HEAD)-$(BUILD_DATE)-$(RELEASE)
+  endif
+  DIRTY  = $(shell git status | egrep -q '(Your branch is ahead|modified:|Untracked files:)' && echo dirty)
+  ifneq ($(DIRTY),)
+    LSB_RELEASE_TAG := $(LSB_RELEASE_TAG)-$(DIRTY)
   endif
 endif
 
