Add helper target to output the machine prefix
Added a new Makefile target, machine-prefix, to output the result of
the vendor hardware revision mapping.  Use it like this:

   $ cd onie/build-config
   $ make machine-prefix
   fsl_p2020rdbpca-r0

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -250,6 +250,10 @@ PHONY += lsb-release-tag
 lsb-release-tag:
 	$(Q) echo $(LSB_RELEASE_TAG)
 
+PHONY += machine-prefix
+machine-prefix:
+	$(Q) echo $(MACHINE_PREFIX)
+
 # Install required build packages for a debian based build host
 DEBIAN_BUILD_HOST_PACKAGES	= build-essential stgit u-boot-tools python-sphinx rst2pdf
 PHONY += debian-prepare-build-host
