--- a/build-config/conf/uclibc-powerpc.config
+++ b/build-config/conf/uclibc-powerpc.config
@@ -89,7 +89,7 @@ UCLIBC_DYNAMIC_ATEXIT=y
 # COMPAT_ATEXIT is not set
 UCLIBC_SUSV3_LEGACY=y
 # UCLIBC_SUSV3_LEGACY_MACROS is not set
-# UCLIBC_SUSV4_LEGACY is not set
+UCLIBC_SUSV4_LEGACY=y
 # UCLIBC_STRICT_HEADERS is not set
 # UCLIBC_HAS_STUBS is not set
 UCLIBC_HAS_SHADOW=y
@@ -194,6 +194,7 @@ UCLIBC_HAS_FNMATCH=y
 UCLIBC_HAS_FNMATCH_OLD=y
 # UCLIBC_HAS_WORDEXP is not set
 # UCLIBC_HAS_NFTW is not set
+# UCLIBC_HAS_FTW is not set
 # UCLIBC_HAS_FTS is not set
 UCLIBC_HAS_GLOB=y
 # UCLIBC_HAS_GNU_GLOB is not set
