uclibc - use busybox ldd
Ticket:
Reviewed By: curt
Testing Done: used ldd and ldconfig, they work as expected

Switch to busybox ldd and ldconfig.  Our shared library requirements are
minimal, the busybox versions are sufficent.  This change saves 35k bytes from
the sysroot.cpio.xz.

--- a/build-config/conf/uclibc-powerpc.config
+++ b/build-config/conf/uclibc-powerpc.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Version: 0.9.32
-# Thu Apr 11 08:14:48 2013
+# Version: 0.9.32.1
+# Wed Jul 17 11:59:16 2013
 #
 # TARGET_alpha is not set
 # TARGET_arm is not set
@@ -66,13 +66,12 @@ DOPIC=y
 # ARCH_HAS_NO_LDSO is not set
 HAVE_SHARED=y
 # FORCE_SHAREABLE_TEXT_SEGMENTS is not set
-LDSO_LDD_SUPPORT=y
-LDSO_CACHE_SUPPORT=y
+# LDSO_LDD_SUPPORT is not set
+# LDSO_CACHE_SUPPORT is not set
 LDSO_PRELOAD_ENV_SUPPORT=y
 # LDSO_PRELOAD_FILE_SUPPORT is not set
-LDSO_BASE_FILENAME="ld.so"
-UCLIBC_STATIC_LDCONFIG=y
-LDSO_RUNPATH=y
+# UCLIBC_STATIC_LDCONFIG is not set
+# LDSO_RUNPATH is not set
 LDSO_SEARCH_INTERP_PATH=y
 UCLIBC_CTOR_DTOR=y
 LDSO_GNU_HASH_SUPPORT=y
