--- a/build-config/conf/uclibc-powerpc.config
+++ b/build-config/conf/uclibc-powerpc.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Version: 0.9.32.1
-# Wed Jul 17 11:59:16 2013
+# Tue Jul 23 21:03:49 2013
 #
 # TARGET_alpha is not set
 # TARGET_arm is not set
@@ -75,10 +75,13 @@ LDSO_PRELOAD_ENV_SUPPORT=y
 LDSO_SEARCH_INTERP_PATH=y
 UCLIBC_CTOR_DTOR=y
 LDSO_GNU_HASH_SUPPORT=y
-HAS_NO_THREADS=y
+# HAS_NO_THREADS is not set
 # LINUXTHREADS_OLD is not set
 # LINUXTHREADS_NEW is not set
-# UCLIBC_HAS_THREADS_NATIVE is not set
+UCLIBC_HAS_THREADS_NATIVE=y
+UCLIBC_HAS_THREADS=y
+UCLIBC_HAS_TLS=y
+# PTHREADS_DEBUG_SUPPORT is not set
 UCLIBC_HAS_SYSLOG=y
 UCLIBC_HAS_LFS=y
 # MALLOC is not set
@@ -98,7 +101,7 @@ UCLIBC_HAS_PTY=y
 ASSUME_DEVPTS=y
 UNIX98PTY_ONLY=y
 # UCLIBC_HAS_GETPT is not set
-# UCLIBC_HAS_LIBUTIL is not set
+UCLIBC_HAS_LIBUTIL=y
 UCLIBC_HAS_TM_EXTENSIONS=y
 UCLIBC_HAS_TZ_CACHING=y
 UCLIBC_HAS_TZ_FILE=y
@@ -183,6 +186,7 @@ UCLIBC_HAS_ERRNO_MESSAGES=y
 UCLIBC_HAS_SIGNUM_MESSAGES=y
 # UCLIBC_HAS_SYS_SIGLIST is not set
 UCLIBC_HAS_GNU_GETOPT=y
+UCLIBC_HAS_STDIO_FUTEXES=y
 UCLIBC_HAS_GNU_GETSUBOPT=y
 
 #
@@ -232,6 +236,6 @@ DOSTRIP=y
 # UCLIBC_MALLOC_DEBUGGING is not set
 # UCLIBC_HAS_BACKTRACE is not set
 WARNINGS="-Wall"
-# EXTRA_WARNINGS is not set
+EXTRA_WARNINGS=y
 # DOMULTI is not set
 # UCLIBC_MJN3_ONLY is not set
